// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error states should apply correct classes to multiple types of field 1`] = `
"<form class=\\"has-error\\">
                                        <input required=\\"\\" value=\\"x\\" class=\\"has-success\\">
                                        <input required=\\"\\" value=\\"\\" class=\\"has-error\\">
                                        <input>
                                    </form>"
`;

exports[`error states should apply error after success state to field 1`] = `
"<form class=\\"has-success\\">
                                        <input required=\\"\\" value=\\"x\\" class=\\"has-success\\">
                                    </form>"
`;

exports[`error states should apply error after success state to field 2`] = `
"<form class=\\"has-error\\">
                                        <input required=\\"\\" value=\\"x\\" class=\\"has-error\\">
                                    </form>"
`;

exports[`error states should apply error class to invalid field 1`] = `
"<form class=\\"has-error\\">
                                        <input required=\\"\\" class=\\"has-error\\">
                                    </form>"
`;

exports[`error states should apply success after error state to field 1`] = `
"<form class=\\"has-error\\">
                                        <input required=\\"\\" class=\\"has-error\\">
                                    </form>"
`;

exports[`error states should apply success after error state to field 2`] = `
"<form class=\\"has-success\\">
                                        <input required=\\"\\" class=\\"has-success\\">
                                    </form>"
`;

exports[`error states should apply success class to valid field 1`] = `
"<form class=\\"has-success\\">
                                        <input required=\\"\\" value=\\"x\\" class=\\"has-success\\">
                                    </form>"
`;

exports[`error states should not apply any class to field with no validation rule 1`] = `
"<form class=\\"has-success\\">
                                        <input>
                                    </form>"
`;

exports[`error states should not apply multiple error classes to invalid field 1`] = `
"<form class=\\"has-error\\">
                                        <input required=\\"\\" class=\\"has-error\\">
                                    </form>"
`;
